name: all-simple-paths
version: 0.0.1
cabal-version: 1.22
build-type: Simple
license: BSD3
copyright: (c) Artem Tsushko, 2015
maintainer: artem.tsushko@gmail.com
stability: stable
synopsis: finds all simple paths between two vertices in a connected graph
category: Learning
author: Artem Tsushko

executable all-simple-paths
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        AllSimplePaths
        Graph
    ghc-options: -ferror-spans

